--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ plugins {
 
 
 android {
-    namespace 'com.example.catcontroller'
+    namespace 'com.Runner.MiauDx'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.catcontroller"
+        applicationId "com.Runner.MiauDx"
         minSdk 26
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        targetSdk 34
+        versionCode 101
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
