--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,22 +24,33 @@
 
         <!-- Main Activity -->
         <activity
-            android:name="com.example.catcontroller.MainActivity"
+            android:name="com.Runner.MiauDx.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
 
             </intent-filter>
         </activity>
-        <activity android:name=".ComPortConfigActivity" />
+        <activity
+            android:name=".comPort.ComPortConfigActivity"
+            android:exported="false"
+            android:label="Serial Port Config" />
         <!-- Popup Activity -->
-        <activity android:name=".FilterBandActivity" />
+        <activity
+            android:name=".FilterBandActivity"
+            android:label="Filter Band" />
 
         <!-- Spot Detail Activity -->
-        <activity android:name=".spot.SpotDetailActivity" />
-        <activity android:name=".logbook.ViewLogsActivity" />
+        <activity
+            android:name=".spot.SpotDetailActivity"
+            android:label="Spot Details" />
+        <activity
+            android:name=".logbook.ViewLogsActivity"
+            android:label="Log Book" />
+        <activity
+            android:name=".logbook.EditLogActivity"
+            android:label="Edit log" />
     </application>
 </manifest>
